force-app/main/default/objects/DiagnosticReport__c/DiagnosticReport__c.object-meta.xml
<CustomObject>
    <label>Diagnostic Report</label>
    <nameField>
        <label>Diagnostic Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diagnostic Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>