force-app/main/default/objects/DiagnosticReport__c/fields/Conclusion__c.field-meta.xml
<CustomField>
    <fullName>Conclusion__c</fullName>
    <label>Conclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>