force-app/main/default/objects/DiagnosticReport__c/fields/Issued__c.field-meta.xml
<CustomField>
    <fullName>Issued__c</fullName>
    <label>Issued</label>
    <type>DateTime</type>
</CustomField>