force-app/main/default/objects/DiagnosticReport__c/fields/Report_Code__c.field-meta.xml
<CustomField>
    <fullName>Report_Code__c</fullName>
    <label>Report Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>