force-app/main/default/objects/DiagnosticReport__c/fields/Report_Code_System__c.field-meta.xml
<CustomField>
    <fullName>Report_Code_System__c</fullName>
    <description>Default code system for diagnostic reports is LOINC. Global value set defaults are package-wide, so LOINC is not marked default on LogicEMR_Code_System.</description>
    <label>Report Code System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LogicEMR_Code_System</valueSetName>
    </valueSet>
</CustomField>