force-app/main/default/objects/DiagnosticReport__c/fields/Report_Display__c.field-meta.xml
<CustomField>
    <fullName>Report_Display__c</fullName>
    <label>Report Display</label>
    <length>255</length>
    <type>Text</type>
</CustomField>