force-app/main/default/objects/DiagnosticReport__c/fields/Report_Ref__c.field-meta.xml
<CustomField>
    <fullName>Report_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Canonical Code Reference. Report_Display__c and Report_Code__c remain snapshot fields populated at selection.</description>
    <label>Report Type</label>
    <referenceTo>Code_Reference__c</referenceTo>
    <relationshipLabel>Diagnostic Reports</relationshipLabel>
    <relationshipName>DiagnosticReports</relationshipName>
    <type>Lookup</type>
</CustomField>