force-app/main/default/objects/DiagnosticReport__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reviewed Diagnostic Reports</relationshipLabel>
    <relationshipName>ReviewedDiagnosticReports</relationshipName>
    <type>Lookup</type>
</CustomField>