force-app/main/default/objects/DiagnosticReport__c/fields/ServiceRequest__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Diagnostic Reports</relationshipLabel>
    <relationshipName>DiagnosticReports</relationshipName>
    <type>Lookup</type>
</CustomField>