force-app/main/default/objects/DiagnosticReport__c/listViews/All_Reports.listView-meta.xml
<ListView>
    <fullName>All_Reports</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Report_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_DateTime__c</columns>
    <columns>Issued__c</columns>
    <columns>ServiceRequest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Reports</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>