force-app/main/default/objects/DiagnosticReport__c/listViews/Unreviewed.listView-meta.xml
<ListView>
    <fullName>Unreviewed</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Report_Display__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_DateTime__c</columns>
    <columns>Issued__c</columns>
    <columns>ServiceRequest__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Preliminary,Final</value>
    </filters>
    <label>Unreviewed</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>